--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mat_month_picker_dialog
 description: Material design month picker dialog.
-version: 1.1.0
+version: 1.1.1
 homepage: https://github.com/leoshusar/mat_month_picker_dialog
 
 environment:
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
+  intl: '>=0.17.0 <0.19.0'
 
 dev_dependencies:
   lints: ^1.0.0
