--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: '>=0.17.0 <0.19.0'
+  intl: ^0.19.0
 
 dev_dependencies:
   lints: ^1.0.0
